--- a/index.html
+++ b/index.html
@@ -1,135 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game 🍌</title>
-<style>
-  body {
-    background: #222;
-    color: white;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    margin: 0;
-    padding: 20px;
-  }
-  #gameCanvas {
-    background: black;
-    display: block;
-    margin: 20px auto;
-    border: 2px solid #555;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake Game</title>
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+            font-family: Arial, sans-serif;
+        }
+        canvas {
+            background-color: #111;
+            display: block;
+            margin-bottom: 20px;
+        }
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
 <body>
-
-<h1>Snake Game 🍌</h1>
-<canvas id="gameCanvas" width="400" height="400"></canvas>
-
-<script>
-// --- CONFIGURATION DU JEU ---
-const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
-const box = 20;
-
-let snake = [];
-snake[0] = { x: 9 * box, y: 10 * box };
-let score = 0;
-let direction = "RIGHT";
-
-let food = {
-    x: Math.floor(Math.random() * 20) * box,
-    y: Math.floor(Math.random() * 20) * box
-};
-
-// --- BANANE EN IMAGE BASE64 ---
-const bananaImg = new Image();
-bananaImg.src = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAV0lEQVQ4T2NkoBAwUqifATEx8P///wMxUYYCTMewwMDAzMDEYRA1JiYiGQgYGRkZhhkAAh3AoFPCQcUQWcGwQwgU4zAxEjMHYIowu4SFCFp8AAC1B1DW61g7MgAAAABJRU5ErkJggg==";
-
-// --- DESSIN DU SERPENT ---
-function drawSnake() {
-    ctx.fillStyle = "red";
-    for (let i = 0; i < snake.length; i++) {
-        ctx.fillRect(snake[i].x, snake[i].y, box, box);
-    }
-}
-
-// --- CONTROLE DU SERPENT ---
-document.addEventListener("keydown", directionControl);
-function directionControl(event) {
-    if (event.keyCode === 37 && direction !== "RIGHT") direction = "LEFT";
-    else if (event.keyCode === 38 && direction !== "DOWN") direction = "UP";
-    else if (event.keyCode === 39 && direction !== "LEFT") direction = "RIGHT";
-    else if (event.keyCode === 40 && direction !== "UP") direction = "DOWN";
-}
-
-// --- COLLISION AVEC CORPS ---
-function collision(head, array) {
-    for (let i = 0; i < array.length; i++) {
-        if (head.x === array[i].x && head.y === array[i].y) return true;
-    }
-    return false;
-}
-
-// --- DEPLACER LE SERPENT ---
-function moveSnake() {
-    let headX = snake[0].x;
-    let headY = snake[0].y;
-
-    if (direction === "LEFT") headX -= box;
-    if (direction === "RIGHT") headX += box;
-    if (direction === "UP") headY -= box;
-    if (direction === "DOWN") headY += box;
-
-    let newHead = { x: headX, y: headY };
-
-    // Collision murs
-    if (headX < 0 || headX >= canvas.width || headY < 0 || headY >= canvas.height) {
-        clearInterval(game);
-        alert("Game Over ! Tu as touché le mur !");
-        return;
-    }
-
-    // Collision corps
-    if (collision(newHead, snake)) {
-        clearInterval(game);
-        alert("Game Over ! Tu as touché ton corps !");
-        return;
-    }
-
-    // Manger la nourriture
-    if (headX === food.x && headY === food.y) {
-        score++;
-        food.x = Math.floor(Math.random() * 20) * box;
-        food.y = Math.floor(Math.random() * 20) * box;
-    } else {
-        snake.pop();
-    }
-
-    snake.unshift(newHead);
-}
-
-// --- BOUCLE DU JEU ---
-function gameLoop() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-    // Dessiner la banane
-    ctx.drawImage(bananaImg, food.x, food.y, box, box);
-
-    // Afficher le score
-    ctx.fillStyle = "white";
-    ctx.font = "20px Arial";
-    ctx.fillText("Score: " + score, 10, 20);
-
-    drawSnake();
-    moveSnake();
-}
-
-// --- LANCER LE JEU QUAND L'IMAGE EST CHARGÉE ---
-bananaImg.onload = function() {
-    game = setInterval(gameLoop, 200);
-};
-</script>
-
+    <h1>Snake Game 🍌</h1>
+    <canvas id="gameCanvas" width="400" height="400"></canvas>
+    
+    <!-- Script JS externe -->
+    <script src="snake.js"></script>
 </body>
 </html>
