--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Snake Game 🍌</title>
 
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: start;
+        justify-content: flex-start;
         margin: 0;
         padding-top: 20px;
         font-family: Arial, sans-serif;
@@ -27,12 +27,8 @@
 <body>
 
 <h1>Snake Game 🍌</h1>
-
-<!-- Canvas du jeu -->
 <canvas id="gameCanvas" width="400" height="400"></canvas>
 
-<!-- Lien vers le JavaScript -->
 <script src="snake.js"></script>
-
 </body>
 </html>
