--- a/index.html
+++ b/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game 🍌</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Snake Game 🍌</title>
 
-<style>
-    body {
-        background-color: black;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: flex-start;
-        margin: 0;
-        padding-top: 20px;
-        font-family: Arial, sans-serif;
-        color: white;
-    }
+    <style>
+        body {
+            background-color: black;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            margin: 0;
+            padding-top: 20px;
+            font-family: Arial, sans-serif;
+            color: white;
+        }
 
-    #gameCanvas {
-        background-color: #111;
-        border: 2px solid #555;
-    }
-</style>
+        #gameCanvas {
+            border: 2px solid #555;
+        }
+    </style>
 </head>
 <body>
 
 <h1>Snake Game 🍌</h1>
+
 <canvas id="gameCanvas" width="400" height="400"></canvas>
 
-<script src="snake.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
