--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game 🍌</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Snake Game 🍌</title>
 
-    <style>
-        body {
-            background-color: black;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            margin: 0;
-            padding-top: 20px;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
+<style>
+    body {
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 0;
+        padding-top: 20px;
+        font-family: Arial, sans-serif;
+        color: white;
+        touch-action: none; /* important mobile */
+    }
 
-        #gameCanvas {
-            border: 2px solid #555;
-        }
-    </style>
+    h1 {
+        margin-bottom: 10px;
+    }
+
+    #gameCanvas {
+        border: 2px solid #555;
+        touch-action: none;
+    }
+</style>
 </head>
 <body>
 
