--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
 
     button {
-        padding: 10px 20px;
+        padding: 12px 24px;
         margin: 10px;
         font-size: 16px;
         cursor: pointer;
@@ -40,15 +40,5 @@
 
 <h1>Snake Game</h1>
 
-<div class="menu" id="menu">
-    <h2>Choisis un niveau</h2>
-    <button onclick="startGame(1)">Niveau 1 (Facile)</button>
-    <button onclick="startGame(2)">Niveau 2 (Normal)</button>
-    <button onclick="startGame(3)">Niveau 3 (Difficile)</button>
-</div>
+<div class="menu"
 
-<canvas id="gameCanvas" width="400" height="400"></canvas>
-
-<script src="script.js"></script>
-</body>
-</html>
