--- a/index.html
+++ b/index.html
@@ -8,31 +8,37 @@
 <style>
     body {
         margin: 0;
-        padding-top: 20px;
-        background-color: black;
+        background: black;
         color: white;
+        font-family: Arial, sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-family: Arial, sans-serif;
-        touch-action: none;
     }
 
-    canvas {
-        border: 2px solid #555;
-        display: none;
-        touch-action: none;
+    h1 {
+        margin-top: 20px;
     }
 
-    .menu {
+    /* MENU */
+    #menu {
+        margin-top: 40px;
         text-align: center;
     }
 
-    button {
+    #menu button {
         padding: 12px 24px;
         margin: 10px;
         font-size: 16px;
         cursor: pointer;
+    }
+
+    /* CANVAS */
+    canvas {
+        margin-top: 20px;
+        border: 2px solid #555;
+        display: none; /* caché au départ */
+        touch-action: none;
     }
 </style>
 </head>
@@ -40,5 +46,15 @@
 
 <h1>Snake Game</h1>
 
-<div class="menu"
+<div id="menu">
+    <h2>Choisis un niveau</h2>
+    <button onclick="startGame(1)">Niveau 1 (Facile)</button>
+    <button onclick="startGame(2)">Niveau 2 (Normal)</button>
+    <button onclick="startGame(3)">Niveau 3 (Difficile)</button>
+</div>
 
+<canvas id="gameCanvas" width="420" height="420"></canvas>
+
+<script src="script.js"></script>
+</body>
+</html>
