--- a/index.html
+++ b/index.html
@@ -20,24 +20,22 @@
         margin-top: 20px;
     }
 
-    /* MENU */
-    #menu {
+    #menu, #gameOverScreen {
         margin-top: 40px;
         text-align: center;
     }
 
-    #menu button {
+    button {
         padding: 12px 24px;
         margin: 10px;
         font-size: 16px;
         cursor: pointer;
     }
 
-    /* CANVAS */
     canvas {
         margin-top: 20px;
         border: 2px solid #555;
-        display: none; /* caché au départ */
+        display: none;
         touch-action: none;
     }
 </style>
@@ -46,11 +44,19 @@
 
 <h1>Snake Game</h1>
 
+<!-- MENU -->
 <div id="menu">
     <h2>Choisis un niveau</h2>
     <button onclick="startGame(1)">Niveau 1 (Facile)</button>
     <button onclick="startGame(2)">Niveau 2 (Normal)</button>
     <button onclick="startGame(3)">Niveau 3 (Difficile)</button>
+</div>
+
+<!-- GAME OVER -->
+<div id="gameOverScreen" style="display:none;">
+    <h2>Game Over</h2>
+    <button onclick="replay()">Rejouer</button>
+    <button onclick="backToMenu()">Menu</button>
 </div>
 
 <canvas id="gameCanvas" width="420" height="420"></canvas>
