--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
         background: black;
         color: white;
         font-family: Arial, sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        text-align: center;
     }
 
     h1 {
         margin-top: 20px;
     }
 
-    #menu, #gameOverScreen {
+    #menu, #gameOver {
         margin-top: 40px;
-        text-align: center;
     }
 
     button {
@@ -33,13 +30,14 @@
     }
 
     canvas {
-        margin-top: 20px;
-        border: 2px solid #555;
         display: none;
+        margin: 20px auto;
+        border: 3px solid #555;
         touch-action: none;
     }
 </style>
 </head>
+
 <body>
 
 <h1>Snake Game</h1>
@@ -53,14 +51,140 @@
 </div>
 
 <!-- GAME OVER -->
-<div id="gameOverScreen" style="display:none;">
+<div id="gameOver" style="display:none;">
     <h2>Game Over</h2>
     <button onclick="replay()">Rejouer</button>
     <button onclick="backToMenu()">Menu</button>
 </div>
 
-<canvas id="gameCanvas" width="420" height="420"></canvas>
+<canvas id="game" width="420" height="420"></canvas>
 
-<script src="script.js"></script>
+<script>
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
+
+const menu = document.getElementById("menu");
+const gameOver = document.getElementById("gameOver");
+
+let snake, food, dir, box, grid, speed, loop, currentLevel;
+
+const levels = {
+    1: { grid: 12, speed: 300 },
+    2: { grid: 16, speed: 260 },
+    3: { grid: 20, speed: 220 }
+};
+
+function startGame(level) {
+    currentLevel = level;
+    grid = levels[level].grid;
+    speed = levels[level].speed;
+    box = canvas.width / grid;
+
+    menu.style.display = "none";
+    gameOver.style.display = "none";
+    canvas.style.display = "block";
+
+    snake = [{ x: box * 5, y: box * 5 }];
+    dir = "RIGHT";
+    food = randomFood();
+
+    clearInterval(loop);
+    loop = setInterval(gameLoop, speed);
+}
+
+function replay() {
+    startGame(currentLevel);
+}
+
+function backToMenu() {
+    clearInterval(loop);
+    canvas.style.display = "none";
+    gameOver.style.display = "none";
+    menu.style.display = "block";
+}
+
+function randomFood() {
+    return {
+        x: Math.floor(Math.random() * grid) * box,
+        y: Math.floor(Math.random() * grid) * box
+    };
+}
+
+document.addEventListener("keydown", e => {
+    if (e.key === "ArrowLeft" && dir !== "RIGHT") dir = "LEFT";
+    if (e.key === "ArrowRight" && dir !== "LEFT") dir = "RIGHT";
+    if (e.key === "ArrowUp" && dir !== "DOWN") dir = "UP";
+    if (e.key === "ArrowDown" && dir !== "UP") dir = "DOWN";
+});
+
+function drawGrid() {
+    for (let y = 0; y < grid; y++) {
+        for (let x = 0; x < grid; x++) {
+            ctx.fillStyle = (x + y) % 2 === 0 ? "#6ab04c" : "#badc58";
+            ctx.fillRect(x * box, y * box, box, box);
+        }
+    }
+}
+
+function drawFood() {
+    ctx.fillStyle = "black";
+    ctx.beginPath();
+    ctx.arc(
+        food.x + box / 2,
+        food.y + box / 2,
+        box / 4,
+        0,
+        Math.PI * 2
+    );
+    ctx.fill();
+}
+
+function drawSnake() {
+    snake.forEach((p, i) => {
+        ctx.fillStyle = i === 0 ? "#c0392b" : "#e74c3c";
+        ctx.fillRect(p.x, p.y, box, box);
+    });
+}
+
+function collision(head) {
+    return snake.some(p => p.x === head.x && p.y === head.y);
+}
+
+function moveSnake() {
+    let head = { ...snake[0] };
+
+    if (dir === "LEFT") head.x -= box;
+    if (dir === "RIGHT") head.x += box;
+    if (dir === "UP") head.y -= box;
+    if (dir === "DOWN") head.y += box;
+
+    if (
+        head.x < 0 || head.y < 0 ||
+        head.x >= canvas.width || head.y >= canvas.height ||
+        collision(head)
+    ) {
+        clearInterval(loop);
+        canvas.style.display = "none";
+        gameOver.style.display = "block";
+        return;
+    }
+
+    if (head.x === food.x && head.y === food.y) {
+        food = randomFood();
+    } else {
+        snake.pop();
+    }
+
+    snake.unshift(head);
+}
+
+function gameLoop() {
+    drawGrid();
+    drawFood();
+    drawSnake();
+    moveSnake();
+}
+</script>
+
 </body>
 </html>
