--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Snake Game</title>
+<title>Mini Games</title>
 
 <style>
     body {
@@ -18,12 +18,12 @@
         margin-top: 20px;
     }
 
-    #menu, #gameOver {
+    .screen {
         margin-top: 40px;
     }
 
     button {
-        padding: 12px 24px;
+        padding: 14px 28px;
         margin: 10px;
         font-size: 16px;
         cursor: pointer;
@@ -39,37 +39,75 @@
 </head>
 <body>
 
-<h1>Snake Game</h1>
+<h1>Mini Games</h1>
 
-<!-- MENU -->
-<div id="menu">
-    <h2>Choisis un niveau</h2>
-    <button onclick="startGame(1)">Niveau 1 (Facile)</button>
-    <button onclick="startGame(2)">Niveau 2 (Normal)</button>
-    <button onclick="startGame(3)">Niveau 3 (Difficile)</button>
+<!-- MENU PRINCIPAL -->
+<div id="mainMenu" class="screen">
+    <h2>Choisis un jeu</h2>
+    <button onclick="openSnakeMenu()">🐍 Snake</button>
+    <button onclick="openGame2()">🎮 Jeu mystère</button>
+</div>
+
+<!-- MENU SNAKE -->
+<div id="snakeMenu" class="screen" style="display:none;">
+    <h2>Snake - Choisis un niveau</h2>
+    <button onclick="startSnake(1)">Facile</button>
+    <button onclick="startSnake(2)">Normal</button>
+    <button onclick="startSnake(3)">Difficile</button>
+    <br>
+    <button onclick="backToMain()">⬅ Retour</button>
 </div>
 
 <!-- GAME OVER -->
-<div id="gameOver" style="display:none;">
+<div id="snakeGameOver" class="screen" style="display:none;">
     <h2>Game Over</h2>
-    <button onclick="replay()">Rejouer</button>
-    <button onclick="backToMenu()">Menu</button>
+    <button onclick="replaySnake()">🔁 Rejouer</button>
+    <button onclick="backToMain()">🏠 Menu principal</button>
 </div>
 
+<!-- CANVAS -->
 <canvas id="game" width="420" height="420"></canvas>
 
 <script>
+// =======================
+// ÉCRANS
+// =======================
+const mainMenu = document.getElementById("mainMenu");
+const snakeMenu = document.getElementById("snakeMenu");
+const snakeGameOver = document.getElementById("snakeGameOver");
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-const menu = document.getElementById("menu");
-const gameOver = document.getElementById("gameOver");
+function hideAll() {
+    mainMenu.style.display = "none";
+    snakeMenu.style.display = "none";
+    snakeGameOver.style.display = "none";
+    canvas.style.display = "none";
+}
 
+// =======================
+// NAVIGATION
+// =======================
+function openSnakeMenu() {
+    hideAll();
+    snakeMenu.style.display = "block";
+}
+
+function openGame2() {
+    alert("Le deuxième jeu sera créé ensemble juste après 😉");
+}
+
+function backToMain() {
+    clearInterval(loop);
+    hideAll();
+    mainMenu.style.display = "block";
+}
+
+// =======================
+// SNAKE - CONFIG
+// =======================
 let snake, food, dir, box, grid, speed, loop, currentLevel;
 
-// =======================
-// CONFIG DES NIVEAUX
-// =======================
 const levels = {
     1: { grid: 12, speed: 320 },
     2: { grid: 16, speed: 260 },
@@ -77,16 +115,15 @@ const levels = {
 };
 
 // =======================
-// DÉMARRAGE
+// SNAKE - START
 // =======================
-function startGame(level) {
+function startSnake(level) {
     currentLevel = level;
     grid = levels[level].grid;
     speed = levels[level].speed;
     box = canvas.width / grid;
 
-    menu.style.display = "none";
-    gameOver.style.display = "none";
+    hideAll();
     canvas.style.display = "block";
 
     snake = [
@@ -99,41 +136,29 @@ function startGame(level) {
     loop = setInterval(gameLoop, speed);
 }
 
-function replay() {
-    startGame(currentLevel);
-}
-
-function backToMenu() {
-    clearInterval(loop);
-    canvas.style.display = "none";
-    gameOver.style.display = "none";
-    menu.style.display = "block";
+function replaySnake() {
+    startSnake(currentLevel);
 }
 
 // =======================
-// FRUIT (PAS DANS LE SNAKE)
+// FRUIT (PAS DANS SNAKE)
 // =======================
 function randomFood() {
-    let pos;
-    let invalid;
+    let pos, invalid;
 
     do {
         pos = {
             x: Math.floor(Math.random() * grid) * box,
             y: Math.floor(Math.random() * grid) * box
         };
-
-        invalid = snake.some(part =>
-            part.x === pos.x && part.y === pos.y
-        );
-
+        invalid = snake.some(p => p.x === pos.x && p.y === pos.y);
     } while (invalid);
 
     return pos;
 }
 
 // =======================
-// CONTRÔLES CLAVIER
+// CONTRÔLES
 // =======================
 document.addEventListener("keydown", e => {
     if (e.key === "ArrowLeft" && dir !== "RIGHT") dir = "LEFT";
@@ -172,7 +197,7 @@ function drawSnake() {
         ctx.fillStyle = i === 0 ? "#c0392b" : "#e74c3c";
         ctx.fillRect(p.x, p.y, box, box);
 
-        // yeux sur la tête
+        // 👀 VISUEL DE LA TÊTE (CORRIGÉ)
         if (i === 0) {
             ctx.fillStyle = "white";
             ctx.fillRect(p.x + box * 0.2, p.y + box * 0.25, box * 0.15, box * 0.15);
@@ -202,8 +227,8 @@ function moveSnake() {
         collision(head)
     ) {
         clearInterval(loop);
-        canvas.style.display = "none";
-        gameOver.style.display = "block";
+        hideAll();
+        snakeGameOver.style.display = "block";
         return;
     }
 
