--- a/index.html
+++ b/index.html
@@ -1,252 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mini Games</title>
-
-<style>
-    body {
-        margin: 0;
-        background: black;
-        color: white;
-        font-family: Arial, sans-serif;
-        text-align: center;
-    }
-
-    h1 {
-        margin-top: 20px;
-    }
-
-    .screen {
-        margin-top: 40px;
-    }
-
-    button {
-        padding: 14px 28px;
-        margin: 10px;
-        font-size: 16px;
-        cursor: pointer;
-    }
-
-    canvas {
-        display: none;
-        margin: 20px auto;
-        border: 3px solid #555;
-        background: black;
-    }
-</style>
+  <meta charset="UTF-8">
+  <title>Game Hub</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Mini Games</h1>
+<h1>Choisis ton jeu</h1>
 
-<!-- MENU PRINCIPAL -->
-<div id="mainMenu" class="screen">
-    <h2>Choisis un jeu</h2>
-    <button onclick="goSnakeMenu()">🐍 Snake</button>
-    <button onclick="goGame2()">🎮 Jeu à venir</button>
-</div>
+<button onclick="launchSnake()">Snake</button>
+<button onclick="launchLabyrinthe()">Labyrinthe Killer</button>
 
-<!-- MENU SNAKE -->
-<div id="snakeMenu" class="screen" style="display:none;">
-    <h2>Snake – Choisis un niveau</h2>
-    <button onclick="startSnake(1)">Facile</button>
-    <button onclick="startSnake(2)">Normal</button>
-    <button onclick="startSnake(3)">Difficile</button>
-    <br>
-    <button onclick="showMainMenu()">⬅ Retour</button>
-</div>
+<canvas id="gameCanvas"></canvas>
 
-<!-- GAME OVER -->
-<div id="snakeGameOver" class="screen" style="display:none;">
-    <h2>Game Over</h2>
-    <button onclick="restartSnake()">🔁 Rejouer</button>
-    <button onclick="showMainMenu()">🏠 Menu principal</button>
-</div>
-
-<canvas id="game" width="420" height="420"></canvas>
+<script src="save.js"></script>
+<script src="snake.js"></script>
+<script src="labyrinthe.js"></script>
+<script src="shop.js"></script>
 
 <script>
-// =====================
-// ELEMENTS
-// =====================
-const mainMenu = document.getElementById("mainMenu");
-const snakeMenu = document.getElementById("snakeMenu");
-const snakeGameOver = document.getElementById("snakeGameOver");
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
+  function clearGame() {
+    if (window.stopSnake) stopSnake();
+    if (window.stopLabyrinthe) stopLabyrinthe();
+  }
 
-let loop;
+  function launchSnake() {
+    clearGame();
+    startSnake();
+  }
 
-// =====================
-// AFFICHAGE
-// =====================
-function hideAll() {
-    mainMenu.style.display = "none";
-    snakeMenu.style.display = "none";
-    snakeGameOver.style.display = "none";
-    canvas.style.display = "none";
-}
-
-function showMainMenu() {
-    clearInterval(loop);
-    hideAll();
-    mainMenu.style.display = "block";
-}
-
-function goSnakeMenu() {
-    hideAll();
-    snakeMenu.style.display = "block";
-}
-
-function goGame2() {
-    alert("Le deuxième jeu sera créé ensemble juste après 😉");
-}
-
-// =====================
-// SNAKE CONFIG
-// =====================
-let snake, food, dir, box, grid, speed, currentLevel;
-
-const levels = {
-    1: { grid: 12, speed: 320 },
-    2: { grid: 16, speed: 260 },
-    3: { grid: 20, speed: 220 }
-};
-
-// =====================
-// START SNAKE
-// =====================
-function startSnake(level) {
-    currentLevel = level;
-    grid = levels[level].grid;
-    speed = levels[level].speed;
-    box = canvas.width / grid;
-
-    hideAll();
-    canvas.style.display = "block";
-
-    snake = [
-        { x: box * Math.floor(grid / 2), y: box * Math.floor(grid / 2) }
-    ];
-    dir = "RIGHT";
-    food = randomFood();
-
-    clearInterval(loop);
-    loop = setInterval(gameLoop, speed);
-}
-
-function restartSnake() {
-    startSnake(currentLevel);
-}
-
-// =====================
-// FRUIT SAFE
-// =====================
-function randomFood() {
-    let pos;
-    do {
-        pos = {
-            x: Math.floor(Math.random() * grid) * box,
-            y: Math.floor(Math.random() * grid) * box
-        };
-    } while (snake.some(p => p.x === pos.x && p.y === pos.y));
-    return pos;
-}
-
-// =====================
-// CONTROLES
-// =====================
-document.addEventListener("keydown", e => {
-    if (e.key === "ArrowLeft" && dir !== "RIGHT") dir = "LEFT";
-    if (e.key === "ArrowRight" && dir !== "LEFT") dir = "RIGHT";
-    if (e.key === "ArrowUp" && dir !== "DOWN") dir = "UP";
-    if (e.key === "ArrowDown" && dir !== "UP") dir = "DOWN";
-});
-
-// =====================
-// DESSINS
-// =====================
-function drawGrid() {
-    for (let y = 0; y < grid; y++) {
-        for (let x = 0; x < grid; x++) {
-            ctx.fillStyle = (x + y) % 2 === 0 ? "#6ab04c" : "#badc58";
-            ctx.fillRect(x * box, y * box, box, box);
-        }
-    }
-}
-
-function drawFood() {
-    ctx.fillStyle = "black";
-    ctx.beginPath();
-    ctx.arc(food.x + box/2, food.y + box/2, box/4, 0, Math.PI*2);
-    ctx.fill();
-}
-
-function drawSnake() {
-    snake.forEach((p, i) => {
-        ctx.fillStyle = i === 0 ? "#c0392b" : "#e74c3c";
-        ctx.fillRect(p.x, p.y, box, box);
-
-        // 👀 TÊTE DU SNAKE (VISIBLE)
-        if (i === 0) {
-            ctx.fillStyle = "white";
-            ctx.fillRect(p.x + box*0.2, p.y + box*0.25, box*0.15, box*0.15);
-            ctx.fillRect(p.x + box*0.6, p.y + box*0.25, box*0.15, box*0.15);
-        }
-    });
-}
-
-// =====================
-// LOGIQUE
-// =====================
-function collision(head) {
-    return snake.some(p => p.x === head.x && p.y === head.y);
-}
-
-function moveSnake() {
-    let head = { ...snake[0] };
-
-    if (dir === "LEFT") head.x -= box;
-    if (dir === "RIGHT") head.x += box;
-    if (dir === "UP") head.y -= box;
-    if (dir === "DOWN") head.y += box;
-
-    if (
-        head.x < 0 || head.y < 0 ||
-        head.x >= canvas.width || head.y >= canvas.height ||
-        collision(head)
-    ) {
-        clearInterval(loop);
-        hideAll();
-        snakeGameOver.style.display = "block";
-        return;
-    }
-
-    if (head.x === food.x && head.y === food.y) {
-        food = randomFood();
-    } else {
-        snake.pop();
-    }
-
-    snake.unshift(head);
-}
-
-// =====================
-// LOOP
-// =====================
-function gameLoop() {
-    drawGrid();
-    drawFood();
-    drawSnake();
-    moveSnake();
-}
-
-// =====================
-// INITIALISATION
-// =====================
-showMainMenu(); // 👈 CRUCIAL
+  function launchLabyrinthe() {
+    clearGame();
+    startLabyrinthe();
+  }
 </script>
 
 </body>
