--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
 </head>
 <body>
 
-  <!-- MENU -->
+  <!-- MENU PRINCIPAL -->
   <div id="menu">
     <h1>Choisis ton jeu</h1>
     <button id="btnSnake">Snake</button>
     <button id="btnLab">Labyrinthe Killer</button>
   </div>
 
+  <!-- UI SNAKE -->
+  <div id="snakeUI" style="display:none;">
+    <p id="scoreSnake">Score : 0</p>
+    <button onclick="showMenu()">Retour au menu</button>
+  </div>
+
   <!-- CANVAS UNIQUE -->
-  <canvas id="gameCanvas" width="640" height="640"></canvas>
+  <canvas id="gameCanvas" width="600" height="600"></canvas>
 
   <!-- SCRIPTS -->
   <script src="save.js"></script>
