--- a/snake/index.html
+++ b/snake/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Snake</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1>🐍 Snake</h1>
+
+<canvas id="game" width="400" height="400"></canvas>
+
+<div class="info">
+    <p>Score : <span id="score">0</span></p>
+    <button onclick="restart()">🔄 Rejouer</button>
+    <a href="../index.html">⬅ Menu</a>
+</div>
+
+<script src="snake.js"></script>
+</body>
+</html>
 
