--- a/snake/index.html
+++ b/snake/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Snake</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -13,11 +13,11 @@
 
 <div class="info">
     <p>Score : <span id="score">0</span></p>
-    <button onclick="restart()">🔄 Rejouer</button>
+    <button id="restart">🔄 Rejouer</button>
     <a href="../index.html">⬅ Menu</a>
 </div>
 
-<script src="snake.js"></script>
+<!-- ⚠️ script TOUJOURS À LA FIN -->
+<script src="./snake.js"></script>
 </body>
 </html>
-
